Addressed the scaling Issues on Mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -115,7 +115,7 @@ a:hover {
     }
 
     h1 {
-        font-size: .3rem;
+        font-size: 0.8rem;
     }
 
     p {
@@ -148,7 +148,7 @@ a:hover {
     body {
         background-color: var(--clr-dark);
         color: var(--clr-accent);
-        font-size: 0.1rem;
+        /* font-size: 0.1rem; */
         min-width: 60px;
         min-height: 75px;
         padding: 0;
@@ -156,7 +156,7 @@ a:hover {
     }
 
     h1 {
-        font-size: .5rem;
+        font-size: 0.8rem;
     }
 
     p {
@@ -191,7 +191,7 @@ a:hover {
     body {
         background-color: var(--clr-dark);
         color: var(--clr-accent);
-        font-size: 0.1rem;
+        /* font-size: 0.1rem; */
         min-width: 60px;
         min-height: 75px;
         padding: 0;
@@ -199,7 +199,7 @@ a:hover {
     }
 
     h1 {
-        font-size: .3rem;
+        font-size: 0.8rem;
     }
 
     p {
@@ -237,11 +237,11 @@ a:hover {
     body {
         background-color: var(--clr-accent);
         color: var(--clr-dark);
-        font-size: 0.1rem;
+        /* font-size: 0.1rem; */
     }
 
     h1 {
-        font-size: 1rem;
+        font-size: 1.8rem;
     }
 
     p {
@@ -274,7 +274,7 @@ a:hover {
     body {
         background-color: var(--clr-accent);
         color: var(--clr-dark);
-        font-size: 0.1rem;
+        /* font-size: 0.1rem; */
     }
 
     h1 {
